[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/EnemyWalking.gd" type="Script" id=2]
[ext_resource path="res://assests/collisions/bodies/EnemyWalking.body.tres" type="Shape2D" id=3]
[ext_resource path="res://assests/collisions/views/EnemyWalking.view.tres" type="Shape2D" id=4]

[node name="EnemyWalking" index="0" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Body" parent="." index="1"]
shape = ExtResource( 3 )

[node name="ViewAreaShape" parent="ViewArea" index="0"]
shape = ExtResource( 4 )

[node name="FeelGround" type="RayCast2D" parent="." index="5"]
position = Vector2( 5, 0 )
enabled = true
cast_to = Vector2( 0, 16 )

[node name="FeelFront" type="RayCast2D" parent="." index="6"]
position = Vector2( 5, 0 )
enabled = true
cast_to = Vector2( 2, 0 )
